--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,11 +14,23 @@ spring:
           predicates:
             - Path=/people/**
 
+        - id: dante-service
+          uri: lb://DANTE-SERVICE
+          predicates:
+            - Path=/dante/**
+          filters:
+            - AuthFilter
+
+        - id: jwt-server
+          uri: lb://jwt-server
+          predicates:
+            - Path=/auth
+
 eureka:
   client:
     register-with-eureka: true
     fetch-registry: true
     service-url:
-      defaultZone: http://eureka-server:8761/eureka/
+      defaultZone: http://localhost:8761/eureka/
   instance:
     prefer-ip-address: true
