Setup Trancing Server.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,7 +25,11 @@ spring:
           uri: lb://jwt-server
           predicates:
             - Path=/auth
-
+  zipkin: 
+    base-url: http://localhost:9411/
+  sleuth:
+    sampler:
+      probability: 1.0
 eureka:
   client:
     register-with-eureka: true
